# Swiftshelf

./: .gitignore  Dockerfile  README.md  __init__.py  agent_final_pass.txt  agent_final_real_output.out  agent_final_real_output.txt  agent_fix_output.txt  app.py  client.py  grader.py  grader_final.txt  grader_final_2.txt  grader_output.txt  grader_output_fresh.txt  grader_tmp.txt  index.html  inference.py  models.py  openenv.yaml  output.txt  output_tests.txt  pyproject.toml  pyrightconfig.json  pytest_fail.out  pytests.out  pytests_final.out  requirements.txt  tasks.py
agent/: dummy_torch_agent.py  llm_agent.py
api/: server.py
env/: __init__.py  environment.py
server/: app.py  index.html
tests/: test_env.py
tmp/: openenv_validation.py  pytest_result.txt
